--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "bootstrap": "^4.3.1",
+    "bootstrap-vue": "^2.0.0-rc.16",
     "vue": "^2.6.6",
     "vue-router": "^3.0.1"
   },
